# WorkDocGen

./: .gitignore  README.md  index.html  package-lock.json  package.json  rust_build.txt  tailwind.config.js  vite_build.txt
docs/: ARCHITECTURE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: generate.rs  history.rs  mod.rs  settings.rs  templates.rs
src-tauri/src/engine/: llm_client.rs  mod.rs  prompt_engine.rs  template_manager.rs
src-tauri/src/models/: generation.rs  mod.rs  provider.rs  template.rs
src-tauri/src/providers/: openai_compat.rs
src-tauri/src/storage/: database.rs
src-tauri/templates/: architecture.json  bug_analysis.json  commit_msg.json  pr_desc.json  resume.json  tech_doc.json  tech_note.json  weekly_report.json
src/components/: Editor.tsx  HistoryPanel.tsx  Layout.tsx  Preview.tsx  SettingsModal.tsx  Sidebar.tsx  VariableInput.tsx
src/hooks/: useGenerate.ts  useHistory.ts  useSettings.ts  useTemplates.ts
src/stores/: appStore.ts
src/styles/: index.css
src/types/: index.ts
